# JOBS_NAVIGATOR

./: .gitignore  README.md  Sofa Jobs Navigator.spec  console_log.txt  pyproject.toml  run.py  test_removed_elements.py
.github/workflows/: build-macos.yml  build-windows.yml
.venv_build/: pyvenv.cfg
DEVELOPMENT/: MASTER_PLAN.md  console_messages.md  journal.json  packaging_notes.md
DEVELOPMENT/images -> help/: Help1.psd  Help2.psd  Help3.psd  Help4.psd  Help7.psd
DEVELOPMENT/ui/assets/help/: Help1.psd
packaging/macos/: README.md  _sjn_entry.py  auto_update.sh  build.sh  build_mac.sh  ci_smoke_test.sh  homebrew-cask-template.rb  prune_framework.py  sjn_mac.spec  smoke_test.sh  support_collect.sh
packaging/macos/hooks/: hook-googleapiclient.discovery.py
packaging/windows/: README.md  build.ps1
src/sofa_jobs_navigator/: app.py  version.py
src/sofa_jobs_navigator/config/: flags.py  reference_data.py  settings.py
src/sofa_jobs_navigator/controls/: __init__.py  hotkeys.py
src/sofa_jobs_navigator/logging/: console_file.py  event_log.py
src/sofa_jobs_navigator/maintenance/: factory_reset.py
src/sofa_jobs_navigator/services/: __init__.py  auth_service.py  drive_client.py  google_drive_service.py  recent_history.py
src/sofa_jobs_navigator/ui/: about_window.py  main_window.py  settings_dialog.py  shortcut_picker.py  welcome_window.py
src/sofa_jobs_navigator/ui/assets/: __init__.py
src/sofa_jobs_navigator/utils/: __init__.py  app_icons.py  clipboard.py  sku.py  sound.py
tests/: conftest.py  test_clipboard.py  test_drive_client.py  test_event_log.py  test_recent_history.py  test_settings.py  test_sku.py  test_sound.py
tools/: sync_version.py
(+8 files in other folders)
